--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "debug": "~2.6.0",
     "express": "~4.14.1",
     "jade": "~1.11.0",
+    "moment": "^2.17.1",
     "mongodb": "^2.2.24",
     "morgan": "~1.7.0",
+    "nodemailer": "^3.1.4",
     "serve-favicon": "~2.3.2"
   }
 }
